# raspi-settings

./: README.md  meson.build
src/: main.c  meson.build  pi-date-time-panel.c  pi-date-time-panel.h  pi-date-time-panel.ui  pi-display-panel.c  pi-display-panel.h  pi-display-panel.ui  pi-hardware-panel.c  pi-hardware-panel.h  pi-hardware-panel.ui  pi-keyboard-panel.c  pi-keyboard-panel.h  pi-keyboard-panel.ui  pi-language-panel.c  pi-language-panel.h  pi-language-panel.ui  pi-mouse-panel.c  pi-mouse-panel.h  pi-mouse-panel.ui  pi-network-panel.c  pi-network-panel.h  pi-network-panel.ui  pi-printer-panel.c  pi-printer-panel.h  pi-printer-panel.ui  pi-security-panel.c  pi-security-panel.h  pi-security-panel.ui  pi-settings-app.c  pi-settings-app.h  pi-settings-panel-row.c  pi-settings-panel-row.h  pi-settings-panel-row.ui  pi-settings-panel.c  pi-settings-panel.h  pi-settings-window.c  pi-settings-window.h  pi-settings-window.ui  pi-settings.gresource.xml  (+6 more)
